# FishingRead

./: .gitignore  FishingRead.spec  README.md  bookshelf.html  config.json  context-menu.html  index.html  main.py  package-lock.json  package.json  settings.html  toc.html  vite.config.js
.codegraph/: daemon.pid
fishingread/: __init__.py  __main__.py  app.py  config.py  constants.py  early_logging.py  main_window.py  single_instance.py  svg_icons.py
fishingread/core/: local_reader.py  network_reader.py
fishingread/platform/: windows.py
fishingread/ui/: dialogs.py  menu.py  widgets.py
src/: bookshelf.js  context-menu.css  context-menu.js  main.js  panel.css  settings.css  settings.js  style.css  toc.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
