[package]
name = "fishing-read"
version = "0.1.0"
description = "基于 Tauri 的轻量网络阅读器"
authors = ["FishingRead"]
edition = "2021"

[lib]
name = "fishing_read_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["sync"] }
